--- a/views/tarefas.ejs
+++ b/views/tarefas.ejs
@@ -72,7 +72,7 @@
 						<%= contato.telefone %><br>
 			<%} %>
 			</div>
-
+<!--
 			<div class="well">
 				<h3>Editar Contato</h3>
 				<form method="post" action="/contato/editar">
@@ -87,7 +87,7 @@
 					<br><br>
 					<input type="submit" value="Editar">
 				</form>
-			</div>
+			</div>-->
 	</div>
 </body>
 
