--- a/views/tarefas.ejs
+++ b/views/tarefas.ejs
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="https://bootswatch.com/cerulean/bootstrap.min.css">
 	<style>
 		.remover:checked+span {
-			color: red;
+			color: green;
 		}
 
 		.lista-tarefas {
