--- a/views/tarefas.ejs
+++ b/views/tarefas.ejs
@@ -2,7 +2,7 @@
 
 <head>
 	<title>Lista de Tarefas</title>
-	<link rel="stylesheet" href="https://bootswatch.com/cerulean/bootstrap.min.css">
+	<link rel="stylesheet" href="https://bootswatch.com/cyborg/bootstrap.min.css">
 	<style>
 		.remover:checked+span {
 			color: green;
